--- a/src/app/components/event-list/event-list.component.css
+++ b/src/app/components/event-list/event-list.component.css
@@ -300,3 +300,63 @@ li:hover {
   }
 }
 
+
+@media (max-width: 768px) {
+.cosmic-list {
+  animation: slideInRight 1s ease-in-out;
+  width: 60%; /* Set desired width */
+  height: 100%; /* Ensure full height */
+  overflow: auto; /* Add scrollable behavior */
+  background-color: rgba(0, 0, 0, 0.6); /* Add a semi-transparent overlay color */
+  padding: 10px; /* Add padding for the overlay */
+}
+.planet.planet1 {
+  top: 20%;
+  right: 10%;
+  animation-duration: 8s;
+  opacity: 0.3;
+}
+
+.planet.planet2 {
+  top: 30%;
+  right: 20%;
+  animation-duration: 12s;
+  opacity: 0.3;
+}
+
+.planet.planet3 {
+  top: 40%;
+  right: 30%;
+  animation-duration: 10s;
+  opacity: 0.3;
+}
+
+.planet.planet4 {
+  top: 50%;
+  right: 40%;
+  animation-duration: 15s;
+  opacity: 0.3;
+}
+
+.planet.planet5 {
+  top: 60%;
+  right: 50%;
+  animation-duration: 14s;
+  opacity: 0.3;
+}
+
+.planet.planet6 {
+  top: 70%;
+  right: 60%;
+  animation-duration: 11s;
+  opacity: 0.3;
+}
+
+.planet.planet7 {
+  top: 80%;
+  right: 70%;
+  animation-duration: 13s;
+  opacity: 0.3;
+}
+
+}
