--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,6 +7,23 @@
   background-image: url("../assets/galaxy2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  overflow: auto;
+}
+
+.container::-webkit-scrollbar {
+  width: 8px; /* Set the width of the scrollbar */
+}
+
+.container::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0.5); /* Set the background color of the scrollbar track */
+}
+
+.container::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.5); /* Set the color of the scrollbar thumb */
+}
+
+.container::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.8); /* Set the color of the scrollbar thumb on hover */
 }
 
 .navbar {
