--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -124,10 +124,11 @@ li:hover {
     max-height: 0;
     overflow: hidden;
     width: 100%;
+    height: 100%; /* Adjust the maximum height as needed */
   }
 
   .navbar-mobile-show {
-    max-height: 300px; /* Adjust the maximum height as needed */
+    height: 100%; /* Adjust the maximum height as needed */
     display: contents;
   }
 
