--- a/src/app/components/image-search/image-search.component.css
+++ b/src/app/components/image-search/image-search.component.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Candal&display=swap');
 
 .container {
-  /* background-image: url('../../../assets/6502013.jpg'); */
   color: #ffffff;
 }
 
@@ -13,43 +12,28 @@
   color: #ffffff;
   overflow: auto;
   text-align: center;
-  width: 30%; /* Set desired width */
-  
+  width: 30%;
 }
 
-p{
+p, label.image-search-input, li {
   color: #ffffff;
 }
 
-.text-center {
+.text-center, .items-center {
   text-align: center;
-}
-
-.items-center{
   align-items: center;
 }
 
-
-.compact-form {
+.compact-form, .compact-form .mat-form-field {
   margin: 0;
   padding: 0;
 }
-
-.compact-form .mat-form-field {
-  margin-bottom: 0;
-}
-
 
 .image-search-input {
   width: 100%;
   height: 40px;
   padding: 5px 10px;
-  box-sizing: border-box; /* Add this to include padding in the width */
-}
-
-label.image-search-input{
-  font-size: 26px;
-  margin: 5px 10px;
+  box-sizing: border-box;
 }
 
 .dark-input-container {
@@ -76,8 +60,8 @@ label.image-search-input{
   border: none;
   border-radius: 3px;
   opacity: 5;
-  position: relative; /* Add position relative */
-  z-index: 1; 
+  position: relative;
+  z-index: 1;
 }
 
 .dark-button {
@@ -90,7 +74,7 @@ label.image-search-input{
   border-radius: 3px;
   cursor: pointer;
   opacity: 5;
-  z-index: 1; /* Add a higher z-index value */
+  z-index: 1;
   margin: 5px;
 }
 
@@ -98,13 +82,11 @@ label.image-search-input{
   background-color: #888888;
 }
 
-
-
 .image-results {
   margin-top: 20px;
 }
 
-h3{
+h3 {
   background: linear-gradient(#ebe6d5, #ffffff, #e6c408);
   font-family: 'Candal', sans-serif;
   -webkit-background-clip: text;
@@ -120,29 +102,25 @@ h3{
   padding: 10px;
 }
 
-.image-card-title {
+.image-card-title, .image-card-description, .image-card-link {
   color: #ffffff;
+}
+
+.image-card-title {
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
 }
 
 .image-card-description {
-  color: #ffffff;
   font-size: 14px;
   line-height: 1.4;
 }
 
 .image-card-link {
-  color: #ffffff;
   display: block;
   margin-top: 10px;
-  color: #ffffff;
   text-decoration: none;
-}
-
-li {
-  color: #ffffff;
 }
 
 .cosmic-container {
@@ -161,44 +139,43 @@ li {
 }
 
 .images-result-container {
-  width: 50%; /* Adjust the width as desired */
+  width: 50%;
   background-color: rgba(0, 0, 0, 0.6);
   overflow: auto;
   padding: 10px;
   color: #ffffff;
 }
+
 .images-result-wrapper {
-  max-height: 800px; /* Set a maximum height for the container */
-  overflow-y: auto; /* Enable vertical overflow */
+  max-height: 800px;
+  overflow-y: auto;
   opacity: 5;
-  position: relative; /* Add position relative */
+  position: relative;
   z-index: 1;
-}
-.hero{
-  /* transform: rotate(-100deg); */
-  opacity: 0.3;
-  min-height: 90vh;
-  min-width: 100%;
-  position: absolute;
 }
 
 .images-result-wrapper::-webkit-scrollbar {
-  width: 8px; /* Set the width of the scrollbar */
+  width: 8px;
 }
 
 .images-result-wrapper::-webkit-scrollbar-track {
-  background-color: rgba(0, 0, 0, 0.5); /* Set the background color of the scrollbar track */
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .images-result-wrapper::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.5); /* Set the color of the scrollbar thumb */
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .images-result-wrapper::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(255, 255, 255, 0.8); /* Set the color of the scrollbar thumb on hover */
+  background-color: rgba(255, 255, 255, 0.8);
 }
-.images-result-wrapper {
-  overflow: auto;
+
+.images-result-wrapper::-webkit-scrollbar-thumb:vertical {
+  height: 40px;
+}
+
+.images-result-wrapper::-webkit-scrollbar-thumb:horizontal {
+  width: 40px;
 }
 
 .images-result-list {
@@ -208,44 +185,11 @@ li {
 }
 
 .images-result-list li {
-  /* ... your other styles ... */
   margin-bottom: 20px;
   padding: 10px;
   border-radius: 5px;
   color: #ffffff;
 }
-
-/* Scrollbar styles */
-.images-result-container::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-}
-
-.images-result-container::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.5);
-  border-radius: 4px;
-}
-
-.images-result-container::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0.5);
-}
-
-.images-result-container::-webkit-scrollbar-corner {
-  background: rgba(0, 0, 0, 0.5);
-}
-
-.images-result-container::-webkit-scrollbar-thumb:hover {
-  background: rgba(255, 255, 255, 0.8);
-}
-
-.images-result-container::-webkit-scrollbar-thumb:vertical {
-  height: 40px;
-}
-
-.images-result-container::-webkit-scrollbar-thumb:horizontal {
-  width: 40px;
-}
-
 
 .planet-container {
   position: absolute;
@@ -319,7 +263,6 @@ li {
   }
 }
 
-
 @keyframes slideInRight {
   0% {
     transform: translateX(100px);
@@ -331,27 +274,25 @@ li {
   }
 }
 
-
 .image-input {
   overflow: auto;
   padding: 10px;
   background-color: rgba(0, 0, 0, 0.6);
 }
 
-
 @media (max-width: 768px) {
   .images-result-container {
-    width: 60%; /* Adjust the width as desired */
+    width: 60%;
     background-color: rgba(0, 0, 0, 0.6);
     overflow: auto;
     padding: 10px;
     color: #ffffff;
   }
   .images-result-wrapper {
-    max-height: 600px; /* Set a maximum height for the container */
-    overflow-y: auto; /* Enable vertical overflow */
+    max-height: 600px;
+    overflow-y: auto;
     opacity: 5;
-    position: relative; /* Add position relative */
+    position: relative;
     z-index: 1;
   } 
 }
