--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,6 +10,14 @@
   overflow: auto;
 }
 
+h1, h2 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #fff;
+}
+
+
 .container::-webkit-scrollbar {
   width: 8px; /* Set the width of the scrollbar */
 }
