--- a/src/app/components/image-search/image-search.component.css
+++ b/src/app/components/image-search/image-search.component.css
@@ -334,4 +334,10 @@ li {
     position: relative; /* Add position relative */
     z-index: 1;
   } 
+
+
+  .hero{
+    margin-bottom: 0px;
+    max-width: 500px;
+  }
 }
