--- a/src/app/components/image-search/image-search.component.html
+++ b/src/app/components/image-search/image-search.component.html
@@ -11,7 +11,6 @@
 
   <div class="centered-container">
     <div class="images-result-container">
-      <h3>Search Results:</h3>
       <div class="images-result-wrapper">
         <ul class="images-result-list">
           <ng-container *ngFor="let item of images">
@@ -26,7 +25,7 @@
     </div>
 
     <div *ngIf="images && images.length === 0">
-      <p>No images found.</p>
+      <p>No images found.A different path, we shall find. Navigate, explore, the Force guides us. Learn, we must, from this experience. A Jedi's strength, not in the destination, but in the journey. May the Force be with you, always..</p>
       <img src="../../../assets/Yoda.png" alt="">
     </div>
   </div>
